--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <!--상단 액션 바 없애는 theme-->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
+
+
 </resources>
