--- a/app/src/main/res/layout/activity_writing.xml
+++ b/app/src/main/res/layout/activity_writing.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:text="나만의 레시피"
             android:textSize="20dp"
+            android:layout_marginTop="15dp"
             android:layout_gravity="center"
             android:textColor="@color/black" />
         <TextView
@@ -45,6 +46,105 @@
             android:textColor="@color/black" />
 
     </androidx.appcompat.widget.Toolbar>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/food"
+                android:layout_width="321dp"
+                android:layout_height="315dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/foodpic" />
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp">
+
+                <TextView
+                    android:id="@+id/textCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="20dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="카테고리"
+                    android:textColor="@color/black" />
+                <Spinner
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:spinnerMode="dialog"
+                    android:layout_marginLeft="30dp"
+                    app:layout_constraintTop_toBottomOf="@id/textCategory"
+                    app:layout_constraintLeft_toLeftOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <EditText
+                android:id="@+id/editTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="45dp"
+                android:layout_marginTop="20dp"
+                android:hint="제목을 입력하세요"
+                android:textSize="15dp"
+                android:background="@null"/>
+            <TextView
+                android:id="@+id/need"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="45dp"
+                android:layout_marginTop="20dp"
+                android:text="필요한 재료"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
+
+            <EditText
+                android:id="@+id/editFOOD"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="45dp"
+                android:layout_marginTop="10dp"
+                android:textSize="15dp"
+                android:hint="재료를 입력해주세요"
+                android:background="@null"/>
+            <TextView
+                android:id="@+id/foodrecipe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="45dp"
+                android:layout_marginTop="20dp"
+                android:text="내용"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                />
+
+            <EditText
+                android:id="@+id/editRecipe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="45dp"
+                android:layout_marginTop="10dp"
+                android:textSize="15dp"
+                android:hint="내용을 입력해주세요"
+                android:background="@null"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 
 
