--- a/app/src/main/res/layout/activity_writing.xml
+++ b/app/src/main/res/layout/activity_writing.xml
@@ -85,6 +85,7 @@
                     android:text="카테고리"
                     android:textColor="@color/black" />
                 <Spinner
+                    android:id="@+id/spinner"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:spinnerMode="dialog"
