--- a/app/src/main/res/layout/activity_my_recipe.xml
+++ b/app/src/main/res/layout/activity_my_recipe.xml
@@ -31,10 +31,21 @@
         app:layout_constraintTop_toBottomOf="@id/myRecipe_text"
         app:queryHint="검색어를 입력하세요"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/myRecipe_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/myRecipe_searchView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:paddingBottom="320dp"
+        android:clipToPadding="false"/>
+
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/refrigerator"
+        android:id="@+id/recipe_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="30dp"
@@ -47,6 +58,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/menu"/>
+
 
 
     <!--하단 메뉴바-->
