--- a/app/src/main/res/layout/activity_pasta.xml
+++ b/app/src/main/res/layout/activity_pasta.xml
@@ -52,4 +52,16 @@
         app:layout_constraintTop_toBottomOf="@id/pasta_toolbar"
         app:queryHint="검색어를 입력하세요"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/searchView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:paddingBottom="380dp"
+        android:clipToPadding="false">
+    </androidx.recyclerview.widget.RecyclerView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
