--- a/app/src/main/res/layout/myrecipe_recycler_item.xml
+++ b/app/src/main/res/layout/myrecipe_recycler_item.xml
@@ -13,7 +13,7 @@
     app:contentPadding="10dp">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/select_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_baseline_more_vert_24"
