추가, 읽기, 수정 미완성

--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -75,6 +75,18 @@
         android:layout_marginTop="54dp"
         android:layout_marginLeft="20dp"
         android:text="전체보기 > "/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_scrap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/textScrap"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:paddingBottom="150dp"
+        android:clipToPadding="false">
+    </androidx.recyclerview.widget.RecyclerView>
     <!--하단 메뉴바-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
