crud 이미지빼고 대충 함

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="food_array">
+    <!--<string-array name="food_array">
         <item>한식</item>
         <item>양식</item>
         <item>간식</item>
         <item>기타</item>
-    </string-array>
+    </string-array>-->
 </resources>
