--- a/app/src/main/res/layout/activity_writing.xml
+++ b/app/src/main/res/layout/activity_writing.xml
@@ -88,6 +88,7 @@
                     android:id="@+id/spinner"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
+                    android:entries="@array/food_array"
                     android:spinnerMode="dialog"
                     android:layout_marginLeft="30dp"
                     app:layout_constraintTop_toBottomOf="@id/textCategory"
