--- a/app/src/main/res/layout/activity_refrigerator.xml
+++ b/app/src/main/res/layout/activity_refrigerator.xml
@@ -61,9 +61,10 @@
 
             <TextView
                 android:id="@+id/date"
-                android:layout_width="80dp"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:text="유통기한"
+                android:text="신선도"
+                android:layout_marginLeft="20dp"
                 android:textSize="20dp" />
             <TextView
                 android:id="@+id/num"
