--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -52,4 +52,14 @@
         app:layout_constraintTop_toBottomOf="@id/pasta_toolbar"
         app:queryHint="검색어를 입력하세요"/>
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/recommend_menu"
+        app:layout_constraintTop_toBottomOf="@id/searchView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="80dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
