--- a/app/src/main/res/layout/material_listview_item.xml
+++ b/app/src/main/res/layout/material_listview_item.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/material_name"
-        android:layout_width="120dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
@@ -35,7 +35,7 @@
         android:text="구매 날짜"
         app:layout_constraintTop_toBottomOf="@id/material_name"
         app:layout_constraintLeft_toRightOf="@+id/material_image" />
-    <TextView
+    <!--<TextView
         android:id="@+id/material_due"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
@@ -46,16 +46,26 @@
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/material_name"
-        app:layout_constraintRight_toLeftOf="@id/material_num"/>
+        app:layout_constraintRight_toLeftOf="@id/material_num"/>-->
+    <ProgressBar
+        android:id="@+id/pb"
+        android:progressDrawable="@drawable/progress"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="80dp"
+        android:layout_height="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="30dp"
+        app:layout_constraintLeft_toRightOf="@id/material_name"
+        app:layout_constraintRight_toLeftOf="@id/material_num" />
     <TextView
         android:id="@+id/material_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="0dp"
         android:text="수량"
         android:textSize="17dp"
-        app:layout_constraintLeft_toRightOf="@id/material_due"
+        app:layout_constraintLeft_toRightOf="@id/pb"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
