--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name ="egg">#F6E29A</color>
+    <color name="progress">#7AE363</color>
+    <color name="bycolor">#DADADA</color>
+    <color name="resetcolor">#FFAC54</color>
 </resources>
