--- a/app/src/main/res/layout/material_listview_item.xml
+++ b/app/src/main/res/layout/material_listview_item.xml
@@ -28,7 +28,7 @@
 
     <TextView
         android:id="@+id/material_buydate"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
@@ -55,8 +55,20 @@
         android:layout_height="5dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="30dp"
+        android:max="100"
+
         app:layout_constraintLeft_toRightOf="@id/material_name"
         app:layout_constraintRight_toLeftOf="@id/material_num" />
+
+    <TextView
+        android:id="@+id/material_dday"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="28dp"
+        android:text="디데이"
+        app:layout_constraintTop_toBottomOf="@id/pb"
+        app:layout_constraintLeft_toRightOf="@+id/material_buydate" />
     <TextView
         android:id="@+id/material_num"
         android:layout_width="wrap_content"
