--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -79,6 +79,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="P/W"
+        android:password="true"
         app:layout_constraintTop_toBottomOf="@id/id_check"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="10dp"
